# virgil-sdk-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog  Doxyfile.in  README.md  _access_token_interface_8h_source.html  _access_token_provider_interface_8h_source.html  _base64_url_8h_source.html  _caching_jwt_provider_8h_source.html  _callback_jwt_provider_8h_source.html  _canonical_serializer_8h_source.html  _card_8h_source.html  _card_client_8h_source.html  _card_client_interface_8h_source.html  _card_endpoint_uri_8h_source.html  _card_manager_8h_source.html  _card_signature_8h_source.html  _card_verifier_interface_8h_source.html  _case_insensitive_compare_8h_source.html  _client_request_8h_source.html  _common_8h_source.html  _connection_8h_source.html  _const_access_token_provider_8h_source.html  _crypto_8h_source.html  _error_8h_source.html  _generator_jwt_provider_8h_source.html  _get_card_response_8h_source.html  _json_deserializer_8h_source.html  _json_key_8h_source.html  _json_serializer_8h_source.html  _json_templated_deserializer_8h_source.html  _json_utils_8h_source.html  _jwt_8h_source.html  _jwt_body_content_8h_source.html  _jwt_generator_8h_source.html  _jwt_header_content_8h_source.html  _jwt_verifier_8h_source.html  _key_pair_8h_source.html  (+192 more)
examples/: CMakeLists.txt  CRYPTO_LIBRARY.md  PRIVATE_KEYS_SERVICE.md  PUBLIC_KEYS_SERVICE.md  README.md
examples/IPMessaging/: CMakeLists.txt
examples/IPMessaging/cmake/: rest.cmake  virgil.cmake
examples/IPMessaging/ext/virgil_sdk/: virgil_sdk.cmake
examples/IPMessaging/include/: Channel.h  ChatMember.h  Client.h  SimpleChat.h
examples/IPMessaging/include/models/: EncryptedMessageModel.h
examples/IPMessaging/include/virgil/IPMessaging/: Client.h  Constants.h  SimpleChat.h
examples/IPMessaging/include/virgil/IPMessaging/dto/: Message.h
examples/IPMessaging/src/: Channel.cxx  ChatMember.cxx  Client.cxx  Constants.cxx  SimpleChat.cxx  main.cxx
examples/IPMessaging/src/dto/: Message.cxx
examples/IPMessaging/src/models/: EncryptedMessageModel.cxx
examples/IPMessaging/src/virgil/IPMessaging/: Channel.cxx  ChatMember.cxx  Client.cxx  Constants.cxx  SimpleChat.cxx  main.cxx
examples/IPMessaging/src/virgil/IPMessaging/dto/: Message.cxx
examples/IPMessaging/src/virgil/IPMessaging/models/: EncryptedMessageModel.cxx
examples/IPMessaging/utils/: format_code.sh
examples/data/: private.key  private_key.pem  public.key  user.cert  virgil_public.key
examples/data/application_keys/: app_private.key  app_public.key
examples/data/keys/alice/: private.key  public.key
examples/data/keys/bob/: private.key  private_key_password.txt  public.key
examples/src/: authenticate.cxx  card_create.cxx  card_create_global.cxx  card_create_not_valid.cxx  card_create_not_valid_by_pub_id.cxx  card_create_private.cxx  card_create_private_unauthorized.cxx  card_create_valid.cxx  card_create_valid_by_pub_id.cxx  card_get_card.cxx  card_get_cards.cxx  card_get_service_card.cxx  card_revoke.cxx  card_revoke_not_valid.cxx  card_search.cxx  card_search_app.cxx  card_search_global.cxx  card_search_global_by_email.cxx  card_sign.cxx  card_trust.cxx  card_unsign.cxx  card_untrust.cxx  certificate_create.cxx  certificate_get_revocation_list.cxx  certificate_get_root.cxx  container_confirm.cxx  container_create.cxx  container_delete.cxx  container_info_get.cxx  container_reset_password.cxx  container_update.cxx  container_update_info.cxx  decrypt.cxx  decrypt_wih_key.cxx  decrypt_with_key.cxx  decrypt_with_pass.cxx  encrypt.cxx  encrypt_data_for_multiple_recipients.cxx  encrypt_with_key.cxx  encrypt_with_multiple_recipients.cxx  (+36 more)
examples/src/certificate/: certificate_create.cxx
ext/restless/patch/: CMakeLists.txt
sdk/keys-public/: CMakeLists.txt
sdk/keys-public/ext/: json_ext.cmake  rest_ext.cmake
sdk/keys-public/include/virgil/pki/client/: EndpointClient.h  EndpointUri.h  PkiClient.h  PkiClientBase.h  UserDataClient.h
sdk/keys-public/include/virgil/pki/error/: PkiError.h
sdk/keys-public/include/virgil/pki/http/: Connection.h  Request.h  Response.h
sdk/keys-public/include/virgil/pki/io/: marshaller.h
sdk/keys-public/include/virgil/pki/model/: Account.h  PublicKey.h  UserData.h
sdk/keys-public/include/virgil/string/: JsonKey.h
sdk/keys-public/src/virgil/pki/client/: EndpointClient.cxx  EndpointUri.cxx  PublicKeyClientBase.cxx  UserDataClientBase.cxx
sdk/keys-public/src/virgil/pki/error/: PkiError.cxx
sdk/keys-public/src/virgil/pki/http/: Connection.cxx  ConnectionBase.cxx  Request.cxx  Response.cxx
sdk/keys-public/src/virgil/pki/io/: marshaller_account.cxx  marshaller_public_key.cxx
sdk/keys-public/src/virgil/pki/model/: Account.cxx  UserData.cxx
sdk/keys-public/src/virgil/string/: Base64.cxx
sdk/keys-public/tests/: CMakeLists.txt  test_pki_public_key.cxx  test_pki_user_data.cxx
virgil.sdk.keys/: CMakeLists.txt  ChangeLog  Doxyfile.in  README.md  mainpage.dox
virgil.sdk.keys/ext/: rest_ext.cmake
virgil.sdk.keys/include/virgil/pki/client/: PublicKeyClient.h  PublicKeyClientBase.h  UserDataClientBase.h
virgil.sdk.keys/include/virgil/pki/http/: ConnectionBase.h  Request.h
virgil.sdk.keys/include/virgil/sdk/keys/: Version.h
virgil.sdk.keys/include/virgil/sdk/keys/client/: Credentials.h  CredentialsExt.h  EndpointClient.h  EndpointClientBase.h  EndpointUri.h  KeysClient.h  KeysClientBase.h  KeysClientConnection.h  PkiClient.h  PkiClientBase.h  PublicKeyClient.h  PublicKeyClientBase.h  (+2 more)
virgil.sdk.keys/include/virgil/string/: Base64.h
virgil.sdk.keys/src/virgil/pki/client/: PkiClient.cxx  PkiClientBase.cxx
virgil.sdk.keys/src/virgil/pki/http/: ConnectionBase.cxx  Response.cxx
virgil.sdk.keys/src/virgil/pki/io/: marshaller_user_data.cxx
virgil.sdk.keys/src/virgil/pki/model/: PublicKey.cxx
virgil.sdk.keys/src/virgil/sdk/keys/: Version.cxx
virgil.sdk.keys/src/virgil/string/: JsonKey.cxx
virgil.sdk.keys/tests/: CMakeLists.txt  fakeit_helpers.hpp  fakeit_utils.hpp  helpers.h  test_pki_public_key.cxx  test_pki_user_data.cxx  test_public_key_client.cxx  test_user_data_client.cxx
(+578 files in other folders)
